- do some refactoring - ToDo: Refactor Controllertests for GiftIdeaControllerTest.java; GiftControllerTest.java and TaskControllerTest.java